Fix card image shrinking on smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,13 @@ main {
   overflow: hidden;
 }
 
-.card .card-img, 
+.card .card-img,
 .card .card-txt {
   padding: 1.5rem;
 }
 
 .card .card-img {
-  width: 100%;
+  min-width: 100%;
   height: 55%;
   padding-bottom: 0;
 }
